<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MovieNight</string>
    <string name="action_settings">Settings</string>
    <string name="event_summary">Event Summary</string>
    <string name="cancel">Cancel</string>
    <string name="create_event">Create Event</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="finish">Finish</string>
    <string name="my_events">My Events</string>
    <string name="zip">Zip Code</string>
    <string name="zipSubmit">Click to use this zip code.</string>
    <string name="profile">Profile</string>
    <string name="enterLocation">Enter Location</string>
    <string name="rating_tag">Rating Tag</string>
    <string name="profile_image">Profile Image</string>
    <string name="selected">Selected</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="event_status">Event Status</string>
    <string name="events">Events</string>
    <string name="theaters">Theaters</string>
    <string name="details">Details</string>
    <string name="ratings">Ratings</string>
    <string name="guests">Guests</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="location_icon">Location Icon</string>
    <string name="overview">Overview</string>
    <string name="cast_members">Cast Members</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="host">Host</string>
    <string name="status">Status</string>
    <string name="RSVP">RSVP</string>
    <string name="attending">Attending</string>
    <string name="maybe">Maybe</string>
    <string name="declined">Declined</string>
    <string name="administrator">Administrator</string>
    <string name="invited">Invited</string>
    <string name="change">Change</string>
    <string name="rotten_critic">Critics Tomatometer</string>
    <string name="rotten_audience">Rotten Tomatoes Audience</string>
    <string name="tmdb">The Movie Database</string>
    <string name="no_public_events">No upcoming public events...</string>
    <string name="search">Search</string>
    <string name="search_users">Search Users</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="unfriend">Unfriend</string>
    <string name="logout">Logout</string>
    <string name="select_location">Select Location</string>
    <string name="type_message">Type a message</string>

    <string-array name="status_array">
        <item>@string/attending</item>
        <item>@string/maybe</item>
        <item>@string/declined</item>
    </string-array>

    <item name="TAG_VIEW_HOLDER" type="id"></item>
    <item name="TAG_EVENT" type="id"></item>
    <item name="TAG_THEATER" type="id"></item>

</resources>
