<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >
 	
    <include layout="@layout/movie_heading" />
    
    <TabHost
		android:id="@android:id/tabhost"
		android:layout_width="match_parent"
		android:layout_height="match_parent" >
		
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent">
			
			<TabWidget
				android:id="@android:id/tabs"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="@color/black" />
			
			<FrameLayout
				android:id="@android:id/tabcontent"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >
				
			    <ScrollView
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" >
				
					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical" >
						
					    <LinearLayout
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:orientation="horizontal"
							android:padding="@dimen/global_padding" >
    
							<TextView
								android:layout_width="0dp"
								android:layout_height="wrap_content"
								android:layout_weight=".2"
								android:layout_gravity="center_vertical"
								style="@style/Label"
								android:text="@string/time" />
							
							<LinearLayout
								android:layout_width="0dp"
								android:layout_height="wrap_content"
								android:layout_weight=".8"
								android:orientation="vertical" >
								
							    <TextView
									android:id="@+id/time"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									style="@style/Heading" />
							    
							    <TextView
									android:id="@+id/date"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									style="@style/SubHeading" />
								
							</LinearLayout>
						
						</LinearLayout>
						
					    <View
					        android:layout_width="match_parent"
					        android:layout_height="1dp"
					        android:background="@color/lightgray" />
						
					    <LinearLayout
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:orientation="horizontal"
							android:padding="@dimen/global_padding" >
    
							<TextView
								android:layout_width="0dp"
								android:layout_height="wrap_content"
								android:layout_weight=".2"
								android:layout_gravity="center_vertical"
								style="@style/Label"
								android:text="@string/location" />
							
							<LinearLayout
								android:layout_width="0dp"
								android:layout_height="wrap_content"
								android:layout_weight=".8"
								android:orientation="vertical" >
								
							    <TextView
									android:id="@+id/theater_name"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									style="@style/Heading" />
							    
							    <TextView
									android:id="@+id/theater_address"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									style="@style/SubHeading" />
								
							</LinearLayout>
						
						</LinearLayout>
						
					    <View
					        android:layout_width="match_parent"
					        android:layout_height="1dp"
					        android:background="@color/lightgray" />
						
					    <LinearLayout
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:orientation="horizontal"
							android:padding="@dimen/global_padding" >
    
							<TextView
								android:layout_width="0dp"
								android:layout_height="wrap_content"
								android:layout_weight=".2"
								android:layout_gravity="center_vertical"
								style="@style/Label"
								android:text="@string/host" />
							
							<RelativeLayout 
							    android:layout_width="0dp"
							    android:layout_height="wrap_content"
							    android:layout_weight=".8" >
							    
							    <TextView
									android:id="@+id/host"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:layout_gravity="center_vertical"
									style="@style/Heading" />
							    
							    <TextView
							        android:id="@+id/change_host"
							        android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:layout_toRightOf="@+id/host"
									android:layout_marginLeft="12dp"
									style="@style/GrayButton"
									android:text="@string/change"
									android:visibility="invisible" />
							    
							</RelativeLayout>
						
						</LinearLayout>
						
					    <View
					        android:layout_width="match_parent"
					        android:layout_height="1dp"
					        android:background="@color/lightgray" />
						
					    <LinearLayout
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:orientation="horizontal"
							android:padding="@dimen/global_padding" >
    
							<TextView
								android:layout_width="0dp"
								android:layout_height="wrap_content"
								android:layout_weight=".2"
								android:layout_gravity="center_vertical"
								style="@style/Label"
								android:text="@string/status" />
							
							<FrameLayout
							    android:layout_width="0dp"
							    android:layout_height="wrap_content"
							    android:layout_weight=".8" >
								
								<TextView
									android:id="@+id/status_guest"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									style="@style/YellowButton"
									android:text="@string/RSVP"
									android:visibility="invisible" />
								
								<TextView 
								    android:id="@+id/status_admin"
								    android:layout_width="wrap_content"
								    android:layout_height="wrap_content"
								    android:layout_gravity="center_vertical"
								    android:text="@string/administrator"
								    style="@style/Heading"
								    android:visibility="invisible" />
									
							</FrameLayout>
						
						</LinearLayout>
						
					</LinearLayout>
					
				</ScrollView>
				
				<ExpandableListView
				    android:id="@+id/guests"
					android:layout_width="match_parent"
					android:layout_height="match_parent" />
				
				<RelativeLayout 
				    android:layout_width="match_parent"
					android:layout_height="wrap_content" >
					
				    <ListView
						android:id="@+id/messages"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_above="@+id/new_message"
						android:padding="5dp" />
					
					<EditText 
					    android:id="@+id/new_message"
					    android:layout_width="match_parent"
					    android:layout_height="100dp"
					    android:background="@color/gray"
					    android:textColor="@color/white"
					    android:layout_alignParentBottom="true"
					    android:textSize="16sp" />
					
				</RelativeLayout>
				
			</FrameLayout>
			
		</LinearLayout>
		
	</TabHost>
 
</LinearLayout>
